# sandsim

./: Cargo.toml  README.md  flake.nix
crates/dfutils/src/: grid.rs  gridref.rs  lib.rs
runner/: Cargo.toml
runner/src/: app.rs  context.rs  lib.rs  render_pass.rs  shader.rs  state.rs  ui.rs  window.rs
runner/src/controller/: mod.rs
shaders/sandsim/: Cargo.toml
shaders/sandsim/src/: lib.rs  update.rs
shaders/shared/: Cargo.toml
shaders/shared/src/: grid.rs  gridref.rs  lib.rs  particle.rs  push_constants.rs
shaders/shared/src/noise/: mod.rs  simplex.rs
shaders/shared/src/push_constants/: sandsim.rs
