[workspace]
resolver = "2"
members = [
  "runner",
  "shaders/sandsim",
]
default-members = ["runner"]

[workspace.package]
version = "0.1.0"
authors = ["Abel <abel465@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
bytemuck = "1.20.0"

[workspace.dependencies.spirv-std]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "1932353935338c0ac5b7b150fae0551ddeaa1dad"

[workspace.dependencies.spirv-builder]
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "1932353935338c0ac5b7b150fae0551ddeaa1dad"
default-features = false

[profile.dev]
package.spirv-tools-sys.opt-level = 1
